--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -41,3 +41,40 @@
     left: 0.1rem;
     font-size: 0.5rem;
 }
+
+.button{
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    cursor: pointer;
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer;
+}
+.button-bests {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.button-play{
+
+    color: #fff;
+    background-color: #28a745;
+    border-color: #28a745;
+}
